# Median

./: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  TESTING.md  generate_sample_data.py  pyproject.toml
docs/: Makefile  USER_GUIDE.md  USER_GUIDE_kr.md  make.bat
docs/source/: conf.py  contributing.md  quick_reference.md  user_guide.md
docs/source/api/: utils.rst  visualizations.rst
scripts/: build_docs.bat  build_docs.sh  generate_sample_data.py
src/: __init__.py  data_migrator.py  data_processor.py  hierarchical_mmm.py  optimizer.py  prophet_baseline.py  ridge_mmm.py  robyn_wrapper.py  transformations.py  utils.py  visualizations.py
src/utils/: __init__.py  data_utils.py  plot_utils.py  segment_utils.py
streamlit_app/: __init__.py  app.py  korean_translations.py
streamlit_app/pages/: 1_📊_Data_Upload.py  2_⚙️_Model_Config.py  3_📈_Results.py  4_💰_Budget_Optimizer.py  5_📄_Report.py  6_🔬_Model_Comparison.py
tests/: test_data_processor.py  test_edge_cases.py  test_hierarchical_advanced.py  test_hierarchical_mmm.py  test_optimizer_advanced.py  test_ridge_mmm.py  test_transformations.py  test_utils.py  test_visualizations_error_handling.py  test_weibull_adstock.py
