[tool.poetry]
name = "ridge-mmm-app"
version = "0.1.0"
description = "Ridge Regression-based Marketing Mix Modeling (MMM) web application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
plotly = "^5.17.0"
scipy = "^1.11.0"
openpyxl = "^3.1.0"
fpdf2 = "^2.7.0"
statsmodels = "^0.14.0"
joblib = "^1.3.0"
prophet = "^1.1.5"
protobuf = "^6.33.1"
rpy2 = "^3.6.4"
nevergrad = "^1.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2024.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
